<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wulfrith.animapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:layout_margin="20dp"

                />

            <ImageView
                android:id="@+id/animTarget"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/frame_anim"
                android:layout_margin="20dp"

                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/moveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moveBtn"
                android:onClick="moveAnim"
                style="@style/ButtonStyle"/>
            <Button
                android:id="@+id/rotateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotateBtn"
                android:onClick="rotateAnim"
                android:layout_toRightOf="@id/moveBtn"
                android:layout_toEndOf="@id/moveBtn"
                style="@style/ButtonStyle"/>
            <Button
                android:id="@+id/fadeInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fade_inBtn"
                android:onClick="fadeInAnim"
                android:layout_toRightOf="@id/rotateBtn"
                android:layout_toEndOf="@id/rotateBtn"
                style="@style/ButtonStyle"/>
            <Button
                android:id="@+id/fadeOutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fade_outBtn"
                android:onClick="fadeOutAnim"
                android:layout_below="@id/moveBtn"
                style="@style/ButtonStyle"/>
            <Button
                android:id="@+id/magnifyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magnifyBtn"
                android:onClick="magnifyAnim"
                android:layout_toRightOf="@id/fadeOutBtn"
                android:layout_toEndOf="@id/fadeOutBtn"
                android:layout_below="@id/rotateBtn"
                style="@style/ButtonStyle"/>
            <Button
                android:id="@+id/diminishBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diminishBtn"
                android:onClick="diminishAnim"
                android:layout_toRightOf="@id/magnifyBtn"
                android:layout_toEndOf="@id/magnifyBtn"
                android:layout_below="@id/fadeInBtn"
                style="@style/ButtonStyle"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center|bottom"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startAnimBtn"
                android:onClick="frameAnim"
                style="@style/ButtonStyle"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
